# dockplusai-maestro

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PRD.md  README.md  SDD.md  TASK.md  cloudflared-config.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: PRD_TELEGRAM_COCKPIT.md  RUNBOOK.md  SDD_TELEGRAM_COCKPIT.md
maestro/: __init__.py  config.py  graph.py  graph_nodes.py  graph_state.py  main.py
maestro/agents/: __init__.py  ceo.py  cfo.py  cmo.py  hoa_prospecting_graph.py  marketing.py  operations.py  prospecting.py  sdr.py  triage.py
maestro/memory/: redis_session.py  supabase_memory.py
maestro/profiles/: __init__.py  _schema.py  dockplusai.json  loader.py  roberts.json
maestro/repositories/: __init__.py  store.py  supabase_store.py
maestro/schedulers/: weekly.py
maestro/schemas/: __init__.py  events.py
maestro/services/: __init__.py  actions.py  apify_maps.py  apollo_web.py  call_targets.py  composio.py  cost_monitor.py  (+13 more)
scripts/: apply_supabase_schema.py  configure_supabase_from_composio.py  cost_monitor.py  deploy.sh  example_langgraph_scraper.py  example_langgraph_scraper_local.py  healthcheck.sh  import_prospects_csv.py  list_call_targets.py  register_telegram_webhook.py  run_prospecting_batch.py  seed_supabase.sql  send_provincetown_hoa_campaign.py  session_memory.py  setup_cloudflare_tunnel.sh  setup_gmail_watch.py  smoke_langsmith_trace.py  smoke_prospecting_accounts.py  soak_production_dry_run.py  test_marketing_post.py  vps_first_setup.sh
tests/: conftest.py
(+117 files in other folders)
