[project]
name = "maestro"
version = "2.0.0"
description = "MAESTRO v2.0 — multi-agent AI automation platform for DockPlus AI ecosystem"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  # API
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "slowapi>=0.1.9",
  # HTTP
  "httpx>=0.27.0",
  # Validation / Config
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  # Reliability
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  # LangChain / LangGraph
  "langgraph>=0.2.50",
  "langchain>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "langchain-openai>=0.2.0",
  "langsmith>=0.1.0",
  # Spreadsheets / imports
  "xlrd>=2.0.1",
  # Web scraping
  "beautifulsoup4>=4.12.0",
  # Database / State
  "supabase>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "redis[hiredis]>=5.0.0",
  "langgraph-checkpoint-redis>=0.4.0",
  # Scheduler
  "apscheduler>=3.10.0",
  # AI APIs
  "anthropic>=0.40.0",
  "openai>=1.0.0",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.12.0",
  "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["maestro*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
